oop_mro/tests/trybuild/fail_ambiguous_owned_via_type.stderr
warning: use of deprecated constant `_::__OOP_MRO_WARNING`: ambiguous base `Root` in class `Branch`: `as_base::<Root>()` is unavailable because the target is not unique; use path-directed casts such as `as_base_via::<Left, Root>()`, `as_base_via::<Right, Root>()`
 --> tests/trybuild/fail_ambiguous_owned_via_type.rs:3:1
  |
3 | / oop_class! {
4 | |     class Root {}
5 | |     class Left: Root {}
6 | |     class Right: Root {}
7 | |     class Branch: Left, Right {}
8 | |     class Diamond: Branch {}
9 | | }
  | |_^
  |
  = note: `#[warn(deprecated)]` on by default
  = note: this warning originates in the macro `oop_class` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: use of deprecated constant `_::__OOP_MRO_WARNING`: ambiguous base `Root` in class `Diamond`: `as_base::<Root>()` is unavailable because the target is not unique; use path-directed casts such as `as_base_via::<Left, Root>()`, `as_base_via::<(Branch, Left), Root>()`, `as_base_via::<Right, Root>()`, `as_base_via::<(Branch, Right), Root>()`
 --> tests/trybuild/fail_ambiguous_owned_via_type.rs:3:1
  |
3 | / oop_class! {
4 | |     class Root {}
5 | |     class Left: Root {}
6 | |     class Right: Root {}
7 | |     class Branch: Left, Right {}
8 | |     class Diamond: Branch {}
9 | | }
  | |_^
  |
  = note: this warning originates in the macro `oop_class` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `dyn AsDiamond: OopBoxBaseVia<Branch, dyn AsRoot>` is not satisfied
  --> tests/trybuild/fail_ambiguous_owned_via_type.rs:13:21
   |
13 |     let _ = diamond.into_base_via::<Branch, dyn AsRoot>();
   |                     ^^^^^^^^^^^^^ the trait `OopBoxBaseVia<Branch, dyn AsRoot>` is not implemented for `dyn AsDiamond`
   |
   = help: the following other types implement trait `OopBoxBaseVia<Via, Target>`:
             `dyn AsBranch` implements `OopBoxBaseVia<Left, dyn AsRoot>`
             `dyn AsBranch` implements `OopBoxBaseVia<Right, dyn AsRoot>`
             `dyn AsDiamond` implements `OopBoxBaseVia<(Branch, Left), dyn AsRoot>`
             `dyn AsDiamond` implements `OopBoxBaseVia<(Branch, Right), dyn AsRoot>`
             `dyn AsDiamond` implements `OopBoxBaseVia<Left, dyn AsRoot>`
             `dyn AsDiamond` implements `OopBoxBaseVia<Right, dyn AsRoot>`
note: required by a bound in `into_base_via`
  --> src/lib.rs
   |
   |     fn into_base_via<Via, Target: ?Sized>(self: Box<Self>) -> Box<Target>
   |        ------------- required by a bound in this associated function
   |     where
   |         Self: OopBoxBaseVia<Via, Target>,
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `OopBoxBaseAccess::into_base_via`
